[package]
name = "bevy_asset_ron"
version = "0.3.1"
edition = "2021"
description = "Custom RON assets for Bevy"
repository = "https://github.com/inodentry/bevy_asset_ron"
license = "MIT"
keywords = ["bevy", "assets", "ron", "game", "engine"]
categories = ["game-engines"]
readme = "README.md"
documentation = "https://docs.rs/bevy_asset_ron/latest/bevy_asset_ron/"
exclude = ["assets/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ron = "0.7"
serde = "1"

[dependencies.bevy]
git = "https://github.com/IyesGames/bevy"
branch = "iyes"
default-features = false

[dev-dependencies.bevy]
git = "https://github.com/IyesGames/bevy"
branch = "iyes"
default-features = true
